feat(auth) : Unificatiion AuthType
