# src/route/auth/otp/activate.rs
@@ -22,7 +22,7 @@ pub struct ActivateOtp {
       (status = 500, description = "Internal server error"),
   ),
   params(
-    ("Authorization-type" = String, Header, description = "Type de token (oidc ou buildin)")
+    ("Authorization-type" = AuthType, Header, description = "Type de token (oidc ou buildin)")
   ),
   security(
     ("access_token" = [])
