# src/route/auth/otp/generate.rs
@@ -22,7 +22,7 @@ pub struct GenOtp {
       (status = 500, description = "Internal server error"),
   ),
   params(
-    ("Authorization-type" = String, Header, description = "Type de token (oidc ou buildin)")
+    ("Authorization-type" = AuthType, Header, description = "Type de token (oidc ou buildin)")
   ),
   security(
     ("access_token" = [])
