# src/route/user/get_one_user.rs
@@ -17,7 +17,7 @@ use tracing::Instrument;
   ),
   params(
     ("id" = uuid, Path, description = "Id de l'utilisateur"),
-    ("Authorization-type" = String, Header, description = "Type de token (oidc ou buildin)")
+    ("Authorization-type" = AuthType, Header, description = "Type de token (oidc ou buildin)")
   ),
   security(
     ("access_token" = []),
